# kit-app-template

./: .dockerignore  .gitignore  .gitmodules  ARCHITECTURE.md  BROWSER_DEBUG_CHECKLIST.md  CHANGELOG.md  CLAUDE.md  CLEAN_FORK_SUMMARY.md  CLI_FEATURES.md  CLI_GUI_SEPARATION_COMPLETE.md  COUPLING_ANALYSIS.md  CROSS_PLATFORM_SUMMARY.md  DOCUMENTATION_COMPLETE.md  ENHANCEMENTS_COMPLETE.md  FINAL_RENAME_SUMMARY.md  FIX_APPLICATION_STRUCTURE.md  FIX_REPO_TOML_SYNC.md  IMPLEMENTATION_SUMMARY.md  KIT_APP_STREAMING_DESIGN.md  KIT_APP_STREAMING_PHASE_2_3_COMPLETE.md  MEMORY.md  MERGE_AND_DIAGNOSIS_COMPLETE.md  MERGE_TO_UPSTREAM_ASSESSMENT.md  MIGRATION_SUMMARY.md  MIGRATION_TO_PER_APP_DEPS.md  Makefile  NETWORK_AUDIT.md  PER_APP_DEPENDENCIES.md  PHASE1_COMPLETE.md  PHASE_1_COMPLETE.md  PHASE_1_SUMMARY.md  PHASE_1_UI_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_2_DISCOVERIES.md  PHASE_2_PROGRESS.md  PHASE_3B_COMPLETE.md  PHASE_3B_KICKOFF.md  PHASE_3_EXECUTION_SUMMARY.md  PHASE_3_FOUNDATION_COMPLETE.md  PHASE_4_FOUNDATION_COMPLETE.md  (+47 more)
kit_playground/: .dockerignore  ALL_WORK_COMPLETE.md  API_ENDPOINT_AUDIT.md  API_SYNCHRONIZATION_COMPLETE.md  AUDIT_REPORT.md  BINDING_AUDIT.md  BREAKING_CHANGES_IMPLEMENTED.md  BUGFIXES.md  BUILD.md  CODE_REVIEW_SUMMARY.md  CRITICAL_FIXES_SUMMARY.md  CRITICAL_FIX_PLAN.md  CRITICAL_SECURITY_FIXES.md  CROSS_PLATFORM_BUILD.md  DEV_GUIDE.md  DYNAMIC_PORTS.md  DYNAMIC_PORTS_SUMMARY.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  MEMORY.md  P0_REFACTORING_COMPLETE.md  README.md  README_REFACTORING.md  REMOTE_ACCESS_FIX.md  TESTS_ADDED.md  UI_BUILD_WORKFLOW.md  WRAPPER_INTEGRATION.md  XPRA_SETUP.md  __init__.py  build.bat  build.sh  cross_platform_builder.py  dev.bat  dev.sh  find_free_port.py  package-lock.json  package.json  playground.bat  playground.py  (+6 more)
kit_playground/backend/: __init__.py  config.py  openapi_spec.py  path_helper.py  requirements.txt  web_server.py  web_server.py.old  xpra_manager.py
kit_playground/backend_with_security_backup/: web_server.py
kit_playground/core/: __init__.py  config.py  playground_app.py
kit_playground/docs/: conf.py  index.rst
kit_playground/electron/: main.js  preload.js
kit_playground/kit_playground.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
kit_playground/src/: App.tsx
kit_playground/tests/: README.md  TESTING_GUIDE.md  conftest.py  run_tests.bat  run_tests.sh
kit_playground/ui/: README.md  index.html  package-lock.json  package.json  (+3 more)
(+412 files in other folders)
